--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^19.1.1",
     "react-konva": "^19.0.7",
     "tailwind-merge": "^3.3.1",
+    "use-image": "^1.1.4",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
