--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.1.1",
     "react-konva": "^19.0.7",
+    "react-konva-utils": "^1.1.1",
     "tailwind-merge": "^3.3.1",
     "use-image": "^1.1.4",
     "zustand": "^5.0.7"
